Fixed github-ribbon z-index

--- a/preview/index.html
+++ b/preview/index.html
@@ -44,7 +44,7 @@
                             <h1 class="header__heading-1 content--center">Minimal Design for Multipurpose</h1>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-hcenter">
-                            <a href="#" style="text-decoration: none;" type="button" id="btnContactUs" class="header__button-2 header__button-2--default">Download Now</a>
+                            <a href="https://github.com/DxEDesign/decimal" style="text-decoration: none;" type="button" id="btnContactUs" class="header__button-2 header__button-2--default">Download Now</a>
                         </div>
                     </div>
                 </div>
